# runix

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.rs
kernel/: .rustfmt.toml  Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: asm.rs  framebuffer.rs  lib.rs  main.rs  objdump.txt
kernel/src/acpi/: fadt.rs  madt.rs  mod.rs  sdt.rs  xsdp.rs  xsdt.rs
kernel/src/boot/: framebuffer.rs  mod.rs
kernel/src/cpu/: cpu_info.rs  ioapic.rs  lapic.rs  mod.rs  msr.rs  pit.rs
kernel/src/device/: asm.rs  lapic.rs  mod.rs  serial.rs
kernel/src/interrupts/: asm.rs  handlers.rs  idt.rs  mod.rs
kernel/src/mmu/: address.rs  alloc.rs  mod.rs  physical_address.rs  tlb.rs  virtual_address.rs
kernel/src/mmu/alloc/: boot.rs  bump.rs  mod.rs
kernel/src/mmu/alloc/frame/: boot.rs  mod.rs
kernel/src/mmu/alloc/heap/: fixed_sized_block.rs  linked_list.rs  mod.rs
kernel/src/mmu/paging/: frame.rs  frame_allocator.rs  mod.rs  page.rs  page_table.rs  page_table_entry.rs
kernel/src/mmu/vmm/: asm.rs  frame.rs  mod.rs  page.rs  page_table.rs  page_table_entry.rs
kernel/src/process/: mod.rs
kernel/src/segmentation/: asm.rs  gdt.rs  mod.rs  tss.rs
kernel/src/syscall/: mod.rs
kernel/src/util/: bits.rs  volatile.rs
kernel/src/vmm/: mod.rs
src/: main.rs
