[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
bootloader-x86_64-common = "0.11.4"
bootloader_api = "=0.11.4"
conquer-once = { version = "0.4.0", default-features = false } # this is exclusively used for logging
log = { version = "0.4.20", default-features = false }
spin = "0.9.8"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

